# nql-bot

./: .gitignore  EXISTING_DATABASE_SETUP.md  INTEGRATION_GUIDE.md  MCP_ARCHITECTURE.md  README.md  env.example  main.py  pyproject.toml  start.sh  start_production.sh  test_mcp.py
backend/: __init__.py
backend/models/: movie.py
backend/routers/: direct_queries.py  mcp_queries.py  queries.py  setup.py
backend/services/: __init__.py  conversation_handler.py  direct_query_processor.py  mcp_query_processor.py  query_processor.py  session_manager.py  session_query_processor.py
backend/utils/: database.py
data/: movies.db
data/sessions/: ZJ8HhngtnZTCjNWpftacQAuSBvWuk22dlmGJRQYTPa0.json  aDhybcXFuhAYOf5VI5veFuT5pZO1i5252bdv503659c.json  nsjcP9IDmH_W91D5wRQw_1KBKkG7hyVmfGE87VDAyr4.json
frontend/: app.py
production/: README.md
production/adapters/: database_adapter.py  production_query_processor.py
production/config/: production.env  schema_mappings.json
production/examples/: Dockerfile  docker-compose.yml
production/scripts/: analyze_database.py  setup_production.py
scripts/: populate_100_movies.py  populate_sample_data.py  test_api.py  test_session_system.py
